2002-08-04  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtktree.c: suppress warnings
	* src/rbgtktext.c: use G_DEF_CLASS
	* src/rbgtklayout.c: remove unused global variable gLayout
	* src/rbgtkaccellabel.c: remove unused global variable gAccelLabel
	* src/rbgtkobject.c: make gObject be local variable

2002-08-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: remove definitions of signal names.
	  Now they are defined automatically by glib2.so

2002-08-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgdkpixmap.c, src/rbgtkobject.c, src/rbgtkwindowgroup.c:
	Remove rbgobj_register_class(). Use G_DEF_CLASS() instead.
	* src/*.c: Collect initialization calls (aka Init_hoge()) of
	descendants of Gtk::Object, and put them into Init_gtk_object().

2002-08-01  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtk.c: restore definition of gAllocation and gRequisition.
	  (tentative?)
	* sample/testgtk/labels.rb: convert encoding from euc-jp to utf-8

2002-07-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.[ch]: Remove rbgtk_register_class().
	* src/rbgtk.h: Remove RUBY_GTK_OBJ_KEY.
	* src/rbgtkallocation.c, src/rbgtkrequisition.c: Divide from rbgtk.c.
	* src/rbgtkitemfactroy.c: Remove Gtk::ItemFactory::Constants.
	* src/*.c: Apply G_DEF_CLASS(), G_DEF_CLASS2(), GTYPE2CLASS().
	* src/rbgdkevent.c: Add Gdk::EventButton#button ,#state.
	* src/rbgdkwindow.c: Remove Gdk::WindowAttr temporarily.
	* src/rbgdkdraw.c: Remove Gdk::Segment temporarily.
	* src/rbgdkgc.c: Remove Gdk::GCValues temporarily.
	* src/rbgdk.c: Remove Gdk::Error temporarily.
	* src/rbgtknotebook.c: Remove Gtk::Notebook#cur_page, #page temporarily.

2002-07-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtkeditable.c: Gtk::Editable becomes a module
	* src/rbgtkoldeditable.c: Add file, Support Gtk::OldEditable

2002-07-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
	* src/rbgdkcolormap.c, src/rbgdkdnd.c, src/rbgdkdraw.c,