@@ -3,8 +3,8 @@
 
   rbgtkaccelgroup.c -
 
-  $Author: mutoh $
-  $Date: 2002/07/31 17:23:54 $
+  $Author: sakai $
+  $Date: 2002/08/05 16:24:02 $
 
   Copyright (C) 1998-2000 Yukihiro Matsumoto,
                           Daisuke Kanda,
@@ -33,6 +33,8 @@ gaccelgrp_s_activate(self, obj, key, modtype)
     return self;
 }
 
+#ifdef HAVE__GTK_ACCEL_GROUP_ATTACH
+
 static VALUE
 gaccelgrp_attach(self, obj)
     VALUE self, obj;
@@ -48,6 +50,8 @@ gaccelgrp_detach(self, obj)
     _gtk_accel_group_detach(_SELF(self), RVAL2GOBJ(obj));
     return Qnil;
 }
+
+#endif /* HAVE__GTK_ACCEL_GROUP_ATTACH */
 
 static VALUE
 gaccelgrp_lock(self)
@@ -71,8 +75,10 @@ void Init_gtk_accel_group()
 
     rb_define_singleton_method(gAccelGroup, "activate", gaccelgrp_s_activate, 3);
     rb_define_method(gAccelGroup, "initialize", gaccelgrp_initialize, 0);
+#ifdef HAVE__GTK_ACCEL_GROUP_ATTACH
     rb_define_method(gAccelGroup, "attach", gaccelgrp_attach, 1);
     rb_define_method(gAccelGroup, "detach", gaccelgrp_detach, 1);
+#endif
     rb_define_method(gAccelGroup, "lock", gaccelgrp_lock, 0);
     rb_define_method(gAccelGroup, "unlock", gaccelgrp_unlock, 0);
     rb_define_const(gAccelGroup, "ACCEL_VISIBLE", INT2NUM(GTK_ACCEL_VISIBLE));
